third_party/rust/chromium_crates_io/vendor/zerocopy-0.8.23/tests/ui-stable/transmute-ref-src-not-nocell.stderr
error[E0277]: the trait bound `Src: zerocopy::Immutable` is not satisfied
  --> tests/ui-stable/transmute-ref-src-not-nocell.rs:23:34
   |
23 | const SRC_NOT_IMMUTABLE: &AU16 = transmute_ref!(&Src(AU16(0)));
   |                                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |                                  |
   |                                  the trait `zerocopy::Immutable` is not implemented for `Src`
   |                                  required by a bound introduced by this call
   |
   = note: Consider adding `#[derive(Immutable)]` to `Src`
   = help: the following other types implement trait `zerocopy::Immutable`:
             &T
             &mut T
             ()
             *const T
             *mut T
             AU16
             Box<T>
             F32<O>
           and $N others
note: required by a bound in `AssertSrcIsImmutable`
  --> tests/ui-stable/transmute-ref-src-not-nocell.rs:23:34
   |
23 | const SRC_NOT_IMMUTABLE: &AU16 = transmute_ref!(&Src(AU16(0)));
   |                                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `AssertSrcIsImmutable`
   = note: this error originates in the macro `transmute_ref` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Src: zerocopy::Immutable` is not satisfied
  --> tests/ui-stable/transmute-ref-src-not-nocell.rs:23:34
   |
23 | const SRC_NOT_IMMUTABLE: &AU16 = transmute_ref!(&Src(AU16(0)));
   |                                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `zerocopy::Immutable` is not implemented for `Src`
   |
   = note: Consider adding `#[derive(Immutable)]` to `Src`
   = help: the following other types implement trait `zerocopy::Immutable`:
             &T
             &mut T
             ()
             *const T
             *mut T
             AU16
             Box<T>
             F32<O>
           and $N others
note: required by a bound in `AssertSrcIsImmutable`
  --> tests/ui-stable/transmute-ref-src-not-nocell.rs:23:34
   |
23 | const SRC_NOT_IMMUTABLE: &AU16 = transmute_ref!(&Src(AU16(0)));
   |                                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `AssertSrcIsImmutable`
   = note: this error originates in the macro `transmute_ref` (in Nightly builds, run with -Z macro-backtrace for more info)
